aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

Changes after 1.0b3:
-----------------------------

New Features:
       - Konqueror plugin for adding feeds to aKregator from context menu -PhantomsDad
       - Command line options for adding feeds -PhantomsDad
       
Bug Fixes:
       - Changed "Copy Link Location" to "Copy Link Address" because of the new naming standard of KDE -tpr

Changes after 1.0b2:
-----------------------------

New Features:

       - Configuration dialog added -tpr
       - Kontact plugin added -smt
       - Ability to mark all entries as read on exit -tpr
       - Ability to change middle mouse button behaviour in browser -tpr
       - Ability to specify external browser (KDE default or custom command) -PhantomsDad
       - Fetch all feeds every <num> minutes -tpr
       - Display unread count in the tooltip of the tray icon -tpr

Bug Fixes:

#82618 - Don't crash if there's no kpart available -tpr
#82691 - Don't minimize but close aKregator when session is shutting down -tpr
       - Mark all read marks everything as read -tpr
#82752 - Mark all as read marks every entry in feed(group), mark all feeds as read marks every feed(group) as read -tpr
       - Make the feed tree drop visualizer work -sg
       - Make "Copy Link Location" copy into the selection clipboard as well -sg

Changes from 1.0b1 to 1.0b2:
-----------------------------


New Features:

       - Add Search bar for searching text in articles
       - Clicking on a folder will show articles of all subitems
       - Feed images are stored and aren't fetched every time
       - Show progress while loading feed list
       - Make all shortcuts configurable
       - Gray out feed icons while fetching
       - Add context menus to the article and page readers
       - Add unread count to try icon
#81993 - Save splitter sizes on exit
#82004 - Next Unread in feed menu
#82005 - Link title in article viewer to article link
#82166 - Use ctrl-w to close tabs