@@ -8,9 +8,11 @@ Changes after 1.0b3:
 New Features:
        - Konqueror plugin for adding feeds to aKregator from context menu -PhantomsDad
        - Command line options for adding feeds -PhantomsDad
+       - In case the feed doesn't provide an article <link> element, fall back to the <guid> permaLink -sg
        
 Bug Fixes:
        - Changed "Copy Link Location" to "Copy Link Address" because of the new naming standard of KDE -tpr
+       - Fix archiving of article <guid> ements -sg
 
 Changes after 1.0b2:
 -----------------------------
